app/src/main/java/com/gdavidpb/test/domain/usecase/errors/GetLikedArtistsError.kt
package com.gdavidpb.test.domain.usecase.errors

sealed class GetLikedArtistsError {
    class NoConnection(val isNetworkAvailable: Boolean) : GetLikedArtistsError()
}